--- a/.github/workflows/jacoco-coverage.yml
+++ b/.github/workflows/jacoco-coverage.yml
@@ -1,34 +1,42 @@
 name: Jacoco Coverage Report
 
 on:
-  pull_request:
-    branches: [ main, develop ]
   push:
-    branches: [ main, develop ]
+    branches: [main, develop]
+  pull_request:
+    branches: [main, develop]
 
 jobs:
-  test:
+  coverage:
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
+      - name: Cache Gradle
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.gradle/caches
+            ~/.gradle/wrapper
+          key: gradle-${{ runner.os }}-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
+          restore-keys: gradle-${{ runner.os }}-
+
       - name: Set up JDK 21
         uses: actions/setup-java@v4
         with:
-          java-version: '21'
           distribution: 'temurin'
+          java-version: '21'
 
-      - name: Grant execute permission for gradlew
+      - name: Grant execute permission
         run: chmod +x ./gradlew
 
       - name: Run tests with coverage
         run: ./gradlew testCoverage --no-daemon --stacktrace
 
-      - name: Upload Jacoco HTML Report (Artifact)
-        if: success()
+      - name: Upload HTML Jacoco Report
         uses: actions/upload-artifact@v4
         with:
-          name: jacoco-report
+          name: jacoco-html
           path: build/reports/jacoco/html/
