--- a/.github/workflows/sonarqube.yml
+++ b/.github/workflows/sonarqube.yml
@@ -1,20 +1,33 @@
-name: SonarCloud Analysis
+name: SonarQube Analysis
 
 on:
-  push:
-    branches: [ main ]
   pull_request:
-    branches: [ main ]
+    branches: [main]
 
 jobs:
-  sonarqube:
+  sonar:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
+      - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Set up JDK
+      - name: Cache Gradle
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.gradle/caches
+            ~/.gradle/wrapper
+          key: gradle-${{ runner.os }}-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
+          restore-keys: gradle-${{ runner.os }}-
+
+      - name: Cache SonarCloud scanner
+        uses: actions/cache@v4
+        with:
+          path: ~/.sonar/cache
+          key: sonar-${{ runner.os }}
+
+      - name: Set up JDK 21
         uses: actions/setup-java@v4
         with:
           distribution: 'temurin'
@@ -23,10 +36,7 @@ jobs:
       - name: Grant execute permission
         run: chmod +x ./gradlew
 
-      - name: Run tests and generate coverage
-        run: ./gradlew clean test jacocoTestReport
-
       - name: Run SonarQube analysis
-        run: ./gradlew sonarqube
+        run: ./gradlew sonarqube --no-daemon
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
