fix: Gradle 8+ 환경에 맞춰 SonarQube task 이름을 'sonar'로 변경
- 기존에 사용하던 'sonarqube' task는 Gradle 8 이상에서 deprecated 되었으며,
- 실행 시 경고 메시지와 함께 분석 실패가 발생함.

- 이를 해결하기 위해 공식 문서 기준 task 이름을 'sonar'로 변경함.

--- a/.github/workflows/sonarqube.yml
+++ b/.github/workflows/sonarqube.yml
@@ -39,6 +39,6 @@ jobs:
         run: chmod +x ./gradlew
 
       - name: Run SonarQube analysis
-        run: ./gradlew sonarqube --no-daemon
+        run: ./gradlew sonar --no-daemon
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
