--- a/.gitignore
+++ b/.gitignore
@@ -33,8 +33,13 @@ out/
 /nbdist/
 /.nb-gradle/
 
+.idea/
+/service/build/
+/service/**/build/
+
 ### VS Code ###
 .vscode/
 
 # Kotlin Daemon logs
 buildSrc/.kotlin/errors/
+
