--- a/service/api-server/src/main/resources/application.yml
+++ b/service/api-server/src/main/resources/application.yml
@@ -1,13 +1,9 @@
 spring:
   datasource:
-    url: jdbc:h2:mem:testdb
-    driver-class-name: org.h2.Driver
-    username: sa
-    password:
+    url: jdbc:postgresql://localhost:5432/fds
+    username: postgres
+    password: pass1234
   jpa:
     hibernate:
       ddl-auto: update
     show-sql: true
-    properties:
-      hibernate:
-        format_sql: true
