rename: 송금 도메인 transfer multimodule 설계 및 송금 도메인 문서 update
- service > 멀티모듈 을 services > transfer 로 변경하였다.
- 추후 FDS 시스템과 지갑 시스템으로 도메인 확장 설계를 위해 디렉토리를 수정하였다

--- a/.gitignore
+++ b/.gitignore
@@ -34,8 +34,8 @@ out/
 /.nb-gradle/
 
 .idea/
-/service/build/
-/service/**/build/
+/services/transfer/build/
+/services/transfer/**/build/
 
 ### VS Code ###
 .vscode/
