feat: Snowflake ID infra 이전 및 개선, CustomEnumType 추가, Transaction 도메인 리팩토링, JPA 설정 정리
- Snowflake ID 생성 로직을 shared-kernel → infra로 이동
  - CAS 기반 Lock-Free 구현
  - maxClockBackwardMs 허용 로직 추가
  - 초기 state 0L로 설정하여 첫 호출 역행 예외 방지
  - IdConfig, SnowflakeProps 추가로 스프링 빈 및 환경설정 지원

- Enum <-> DB 매핑을 위한 CustomEnumType 추가
  - enum에 val code: String 있으면 code, 없으면 name 사용
  - 성능을 위해 enum 상수/코드 getter 캐싱 처리

- @CodeMapped 메타 애노테이션 추가
  - @Type(CustomEnumType::class) 대신 간결하게 적용 가능
  - 파라미터 누락 시에도 기본 동작 보장

- Transaction 도메인 로직 리팩토링
  - 상태 전이 메서드 유효성 검증 강화
  - withdrawOrThrow로 출금 검증 및 상태 변경 일원화
  - Instant 기반 시간 처리로 타임존/DST 이슈 방지
  - API 응답 시 LocalDateTime 변환 패턴 마련

- 모듈 의존성 및 설정 정리
  - transfer-api → transfer-application, transfer-infra 의존 추가
  - TransferInfraJpaConfig로 EntityScan, JpaRepository, Auditing 활성화
  - 패키지 스캔 및 @Import로 infra 설정 자동 로딩

--- a/services/transfer/api/src/main/resources/application.yml
+++ b/services/transfer/api/src/main/resources/application.yml
@@ -6,8 +6,5 @@ spring:
     password: pass1234
   jpa:
     hibernate:
-      ddl-auto: update # TODO : 개발 환경에서는 update, 운영 환경에서는 none 으로 설정한다.
+      ddl-auto: create # TODO : 개발 환경에서는 update, 운영 환경에서는 none 으로 설정한다.
     show-sql: true
-
-snowflake:
-  node-id: 1 # TODO : 환경변수로 주입된 nodeId를 사용해야 한다. -> node-id: ${SNOWFLAKE_NODE_ID:0}  # 기본값은 0 이고, 환경변수로 덮어쓴다.
