feat: 송금도메인 Service 로직 리펙토링 및 송금 이력 테이블 적재
- 송금 이력테이블 entity 추가 및 적재
- transaction commit scope 시점 kafka event 발행 로직 추가

--- a/services/fds/instances/consumer/src/main/resources/application.yml
+++ b/services/fds/instances/consumer/src/main/resources/application.yml
@@ -4,6 +4,17 @@ spring:
   main:
     web-application-type: none
 
+  datasource:
+    url: jdbc:postgresql://localhost:5432/transfer
+    username: postgres
+    password: pass1234
+    driver-class-name: org.postgresql.Driver
+  jpa:
+    open-in-view: false
+    hibernate:
+      ddl-auto: none   # 개발 단계에서는 create/update, 운영은 validate/none
+    show-sql: true
+
   kafka:
     bootstrap-servers: localhost:9094
     consumer:
