--- a/services/transfer/instances/api/src/main/resources/application.yml
+++ b/services/transfer/instances/api/src/main/resources/application.yml
@@ -9,8 +9,14 @@ spring:
   jpa:
     open-in-view: false
     hibernate:
-      ddl-auto: create   # 개발 단계에서는 create/update, 운영은 validate/none
+      ddl-auto: none
     show-sql: true
+
+  flyway:
+    enabled: true
+    locations: classpath:db/migration
+    baseline-on-migrate: true
+    validate-on-migrate: true
 
   kafka:
     bootstrap-servers: localhost:9094
@@ -22,6 +28,8 @@ spring:
 
 logging:
   level:
+    org.hibernate.SQL: DEBUG
+    org.hibernate.type.descriptor.sql.BasicBinder: TRACE
     org.springframework.kafka: INFO
 
 id:
