feat: 송금 이벤트 outbox 적용 - transaction aftercommit 이후 event 송신을 제거 ( publish 이벤트를 기대했으나, 이벤트 발행이 안될 수 있어, replay application 에서 스케쥴링 하는것으로 대응

--- a/services/transfer/instances/api/src/main/resources/application.yml
+++ b/services/transfer/instances/api/src/main/resources/application.yml
@@ -22,9 +22,7 @@ spring:
     bootstrap-servers: localhost:9094
     producer:
       key-serializer: org.apache.kafka.common.serialization.StringSerializer
-      value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
-    properties:
-      spring.json.add.type.headers: true
+      value-serializer: org.apache.kafka.common.serialization.ByteArraySerializer
 
 logging:
   level:
@@ -37,3 +35,8 @@ id:
     node-id: ${SNOWFLAKE_NODE_ID:1}
     custom-epoch: 1704067200000
     max-clock-backward-ms: 5
+
+app:
+  relay:
+    enabled: false
+  transfer.topic: transfer.events.v1
