--- a/services/fds/instances/consumer/src/main/resources/application.yml
+++ b/services/fds/instances/consumer/src/main/resources/application.yml
@@ -19,15 +19,24 @@ spring:
     bootstrap-servers: localhost:9094
     consumer:
       group-id: fds-consumer
+      enable-auto-commit: false
       auto-offset-reset: earliest
       key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
-      value-deserializer: org.springframework.kafka.support.serializer.ErrorHandlingDeserializer
+      value-deserializer: org.apache.kafka.common.serialization.ByteArrayDeserializer
       properties:
         spring.deserializer.value.delegate.class: org.springframework.kafka.support.serializer.JsonDeserializer
         spring.json.trusted.packages: "io.github.hyungkishin.transentia.*"
     listener:
-      ack-mode: record
-      missing-topics-fatal: false
+      ack-mode: manual
+      type: single
+
+app:
+  transfer:
+    topic: transfer.events.v1
+  retry:
+    topic: transfer.events.retry.v1
+  dlq:
+    topic: transfer.events.dlq.v1
 
 logging:
   level:
