--- a/services/fds/instances/consumer/src/main/resources/application.yml
+++ b/services/fds/instances/consumer/src/main/resources/application.yml
@@ -12,15 +12,15 @@ spring:
   jpa:
     open-in-view: false
     hibernate:
-      ddl-auto: none   # 개발 단계에서는 create/update, 운영은 validate/none
+      ddl-auto: none
     show-sql: true
 
   kafka:
-    bootstrap-servers: localhost:9094
+    bootstrap-servers: host.docker.internal:9094
     consumer:
       group-id: fds-consumer
-      enable-auto-commit: false
-      auto-offset-reset: earliest
+      enable-auto-commit: true
+      auto-offset-reset: latest
       key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
       value-deserializer: org.apache.kafka.common.serialization.ByteArrayDeserializer
       properties:
