feat: 공통 traceId, spanId 변경 및 common module naming 변경   - delivery-http -> common-application, shared-common -> common-domain   - common gradle micrometer 의존성 추가

--- a/services/transfer/instances/api/src/main/resources/application.yml
+++ b/services/transfer/instances/api/src/main/resources/application.yml
@@ -42,3 +42,9 @@ app:
   relay:
     enabled: false
   transfer.topic: transfer.events.v1
+
+management:
+  tracing:
+    enabled: true
+    sampling:
+      probability: 1.0
