--- a/services/fds/instances/consumer/src/main/resources/application.yml
+++ b/services/fds/instances/consumer/src/main/resources/application.yml
@@ -22,7 +22,7 @@ spring:
       enable-auto-commit: true
       auto-offset-reset: latest
       key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
-      value-deserializer: org.apache.kafka.common.serialization.ByteArrayDeserializer
+      value-deserializer: io.confluent.kafka.serializers.KafkaAvroDeserializer
       properties:
         spring.deserializer.value.delegate.class: org.springframework.kafka.support.serializer.JsonDeserializer
         spring.json.trusted.packages: "io.github.hyungkishin.transentia.*"
