--- a/services/transfer/instances/transfer-relay/src/test/resources/application-test.yml
+++ b/services/transfer/instances/transfer-relay/src/test/resources/application-test.yml
@@ -38,17 +38,15 @@ kafka-producer-config:
 app:
   outbox:
     relay:
-      batchSize: 1000
+      batchSize: 1000                     # 테스트에서는 더 크게
       fixedDelayMs: 1000
+      initialDelayMs: 2000
       timeoutSeconds: 10
       threadPoolSize: 4
       baseBackoffMs: 5000
       maxBackoffMs: 600000
+      stuckThresholdSeconds: 120          # 2분
       slowProcessingThresholdMs: 3000
-      
-      # 파티셔닝 설정 (테스트에서는 코드에서 주입)
-      instanceId: 0
-      totalInstances: 1
 
   kafka:
     topics:
